--- a/grocery_store/lib/grocery_store_web/templates/page/index.html.eex
+++ b/grocery_store/lib/grocery_store_web/templates/page/index.html.eex
@@ -1,36 +1,16 @@
-<div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
-</div>
-
-<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Resources</h4>
-    <ul>
-      <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="https://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
-      </li>
-    </ul>
-  </div>
-</div>
+<% require IEx; IEx.pry() %>
+<h2>Chat with vendor</h2>
+    <div id="chat-box">
+        <div class="col-md-8">
+        <input type="text" id="user-msg" placeholder="Type and press enter..." class="form-control">
+        <button id="btnPost">Post</button>
+        <ul id="MessageList" class="list-unstyled">
+          <%= for message <- @messages do %>
+              <p><b><%= message.name %>:</b> <%= message.body %></p>  
+          <% end %>
+        </ul>
+      </div>
+    </div>
+    
+      
+    
