--- a/lib/grocery_store_web/templates/login/signup.html.eex
+++ b/lib/grocery_store_web/templates/login/signup.html.eex
@@ -23,7 +23,7 @@
 
                                  <div class="form-group">
                                     <label class="col-md-2 control-label" for="name">Password</label>
-                                    <%= text_input f, :password_hex, class: "form-control" %>
+                                    <%= text_input f, :crypted_password, class: "form-control" %>
                                  </div>
 
                                  <div class="form-group">
