--- a/lib/grocery_store_web/templates/session/signin.html.eex
+++ b/lib/grocery_store_web/templates/session/signin.html.eex
@@ -16,7 +16,7 @@
 
                                  <div class="form-group">
                                     <label class="col-md-2 control-label" for="name">Password</label>
-                                    <%= text_input f, :password_hex, class: "form-control" %>
+                                    <%= text_input f, :crypted_password, class: "form-control" %>
                                  </div>
                             </div>
                                 <div class=" col-md-12">
