--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -3380,6 +3380,12 @@ Copyright (c) 2015 Daniel Eden
 /* This file is for your main application css. */
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import "../node_modules/font-awesome/css/font-awesome.css";
+
+
+.welcome-msg {
+    color: rgb(31, 131, 11);
+}
+
 /*!
  * Datepicker for Bootstrap
  *
