--- a/lib/grocery_store_web/templates/layout/app.html.eex
+++ b/lib/grocery_store_web/templates/layout/app.html.eex
@@ -41,15 +41,13 @@
 
           <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+              <li class="nav-item active"><%= link "Home", to: home_path(@conn, :index), class: "nav-link" %></li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="#">Shop</a>
+                  <%= link "Products", to: product_path(@conn, :index), class: "dropdown-item" %>
                   <a class="dropdown-item" href="#">Wishlist</a>
-                  <a class="dropdown-item" href="#">Single Product</a>
                   <a class="dropdown-item" href="#">Cart</a>
-                  <a class="dropdown-item" href="#">Checkout</a>
                 </div>
               </li>
               <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
