added sign up functionality

--- a/lib/grocery_store_web/templates/login/signup.html.eex
+++ b/lib/grocery_store_web/templates/login/signup.html.eex
@@ -2,7 +2,7 @@
     <div class="col-md-8">
         <div class="p-3 ">
             <div class="titleDiv">
-                <h2 class="pagetitle">Registration Form</h2>
+                <h2 class="pagetitle">Be a Member!!</h2>
             </div>
             <div class="row">
                 <div class="col-md-12">
