restricted routes for authonticated users

--- a/lib/grocery_store_web/templates/login/signup.html.eex
+++ b/lib/grocery_store_web/templates/login/signup.html.eex
@@ -41,8 +41,8 @@
                                     <%= error_tag f, :email %>
                                  </div>
                             </div>
-                                <div class=" col-md-12">
-                                    <input type="submit" value="Sign Up" class="btn btn-primary w-100">
+                                <div class=" col-md-5">
+                                    <input type="submit" value="Sign Up" class="btn btn-primary w-100" style='height: 40px'>
                                 </div>
 
                         <% end %>
