--- a/lib/grocery_store_web/templates/page/index.html.eex
+++ b/lib/grocery_store_web/templates/page/index.html.eex
@@ -1,16 +1,327 @@
-<% require IEx; IEx.pry() %>
-<h2>Chat with vendor</h2>
-    <div id="chat-box">
-        <div class="col-md-8">
-        <input type="text" id="user-msg" placeholder="Type and press enter..." class="form-control">
-        <button id="btnPost">Post</button>
-        <ul id="MessageList" class="list-unstyled">
-          <%= for message <- @messages do %>
-              <p><b><%= message.name %>:</b> <%= message.body %></p>  
-          <% end %>
-        </ul>
-      </div>
+<style>
+    .chatbody {
+        height: 93%
+    }
+    
+    .inbox_people {
+        background: #fff;
+        float: left;
+        overflow: hidden;
+        width: 30%;
+        border-right: 1px solid #ddd;
+    }
+    
+    .inbox_msg {
+        border: 1px solid #ddd;
+        clear: both;
+        overflow: hidden;
+    }
+    
+    .srch_bar {
+        display: inline-block;
+        text-align: right;
+        width: 60%;
+        padding:
+    }
+    
+    .headind_srch {
+        padding: 10px 29px 10px 20px;
+        overflow: hidden;
+        border-bottom: 1px solid #c4c4c4;
+    }
+    
+    .recent_heading h4 {
+        color: #0465ac;
+        font-size: 16px;
+        margin: auto;
+        line-height: 29px;
+    }
+    
+    .srch_bar input {
+        outline: none;
+        border: 1px solid #cdcdcd;
+        border-width: 0 0 1px 0;
+        width: 80%;
+        padding: 2px 0 4px 6px;
+        background: none;
+    }
+    
+    .srch_bar .input-group-addon button {
+        background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+        border: medium none;
+        padding: 0;
+        color: #707070;
+        font-size: 18px;
+    }
+    
+    .srch_bar .input-group-addon {
+        margin: 0 0 0 -27px;
+    }
+    
+    .chat_ib h5 {
+        font-size: 15px;
+        color: #464646;
+        margin: 0 0 8px 0;
+    }
+    
+    .chat_ib h5 span {
+        font-size: 13px;
+        float: right;
+    }
+    
+    .chat_ib p {
+        font-size: 12px;
+        color: #989898;
+        margin: auto;
+        display: inline-block;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
+    .chat_img {
+        float: left;
+        width: 11%;
+    }
+    
+    .chat_img img {
+        width: 100%
+    }
+    
+    .chat_ib {
+        float: left;
+        padding: 0 0 0 15px;
+        width: 88%;
+    }
+    
+    .chat_people {
+        overflow: hidden;
+        clear: both;
+    }
+    
+    .chat_list {
+        border-bottom: 1px solid #ddd;
+        margin: 0;
+        padding: 18px 16px 10px;
+    }
+    
+    .inbox_chat {
+        height: 550px;
+        overflow-y: scroll;
+    }
+    
+    .active_chat {
+        background: #e8f6ff;
+    }
+    
+    .incoming_msg_img {
+        display: inline-block;
+        width: 6%;
+    }
+    
+    .incoming_msg_img img {
+        width: 100%;
+    }
+    
+    .received_msg {
+        display: inline-block;
+        padding: 0 0 0 10px;
+        vertical-align: top;
+        width: 92%;
+    }
+    
+    .received_withd_msg p {
+        background: #ebebeb none repeat scroll 0 0;
+        border-radius: 0 15px 15px 15px;
+        color: #646464;
+        font-size: 14px;
+        margin: 0;
+        padding: 5px 10px 5px 12px;
+        width: 100%;
+    }
+    
+    .time_date {
+        color: #747474;
+        display: block;
+        font-size: 12px;
+        margin: 8px 0 0;
+    }
+    
+    .received_withd_msg {
+        width: 57%;
+    }
+    
+    .mesgs {
+        float: left;
+        padding: 30px 15px 0 25px;
+        width: 70%;
+    }
+    
+    .sent_msg p {
+        background: #0465ac;
+        border-radius: 12px 15px 15px 0;
+        font-size: 14px;
+        margin: 0;
+        color: #fff;
+        padding: 5px 10px 5px 12px;
+        width: 100%;
+    }
+    
+    .outgoing_msg {
+        overflow: hidden;
+        margin: 26px 0 26px;
+    }
+    
+    .sent_msg {
+        float: right;
+        width: 46%;
+    }
+    
+    .input_msg_write input {
+        background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+        border: medium none;
+        color: #4c4c4c;
+        font-size: 15px;
+        min-height: 48px;
+        width: 100%;
+        outline: none;
+    }
+    
+    .type_msg {
+        border-top: 1px solid #c4c4c4;
+        position: relative;
+    }
+    
+    .msg_send_btn {
+        background: #05728f none repeat scroll 0 0;
+        border: none;
+        border-radius: 50%;
+        color: #fff;
+        cursor: pointer;
+        font-size: 15px;
+        height: 33px;
+        position: absolute;
+        right: 0;
+        top: 11px;
+        width: 33px;
+    }
+    
+    .messaging {
+        padding: 0 0 50px 0;
+    }
+    
+    .msg_history {
+        height: 680px;
+        overflow-y: scroll;
+        max-height: 680px;
+    }
+    
+    #btnPost {
+        height: 50px;
+        width: 131px;
+        border-radius: 0px;
+    }
+    .outgoing_msg{
+        margin-right: 10px;
+    }
+
+</style>
+<div class="container">
+    <div class="row">
+        <div class="card col-sm-4" style="overflow:scroll; padding: 0px">
+            <input type="hidden" id="current_user_id" value="<%= current_user(@conn).id %>">
+            <%= if @conversation_list do %>
+                <ul class="list-group list-group-flush">
+                    <%= for conversation <- @conversation_list do %>
+                        <li class="list-group-item" data-id="<%= conversation.user_id %>">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">
+                                    <%= String.capitalize(conversation.user_name) %>
+                                </h5>
+                            </div>
+                            <p>
+                                <%= conversation.body %>
+                            </p>
+                        </li>
+                        <% end %>
+                </ul>
+                <% end %>
+        </div>
+        <div class="col-sm-8">
+            <div class="chatbody">
+                <input type="hidden" id="sender-id" value="<%= current_user(@conn).id %>">
+                <div class="msg_history">
+                    <%= if @messages && length(@messages) do %>
+						<%= render "_messages.html", messages: @messages, conn: @conn %>
+                    <% end %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-9">
+                    <input type="text" placeholder="Message..." class="form-control" id="user-msg" />
+                </div>
+                <div class="col-xs-3">
+                    <button class="btn btn-info btn-block" id="btnPost">Send</button>
+                </div>
+            </div>
+        </div>
     </div>
-    
-      
-    
+</div>
+<script src="js/jquery.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+        function getConversationDetails(user_id) {
+            return new Promise((resolve, reject) =>{
+                $.ajax({
+                    url: 'http://localhost:4000/messages',
+                    type: 'GET',
+                    data:{
+                        user_id: user_id
+                    },
+                    dataType: "json",
+                    success: function(data) {
+                        resolve(data)
+                    },
+                    error: function(request, error) {
+                        console.log(error)
+                        //alert("Error: " + JSON.stringify(request));
+                    }
+                });
+            })
+        }
+
+        $(document).on('click', '.list-group-item', function(event){
+            let user_id = $(this).data("id");
+            let loggedInUserId = $('#current_user_id').val();
+            getConversationDetails(user_id).then((response) =>{
+                let messagesList = '';
+                for (i = 0; i < response.length; i++) {
+                    messagesList += messageRow(response[i], loggedInUserId)
+                }
+                $('.msg_history').html(messagesList)
+            })
+        })
+
+        function messageRow(message, loggedInUserId){
+            let messageRowHtml = ''
+            if (message.sender_id == loggedInUserId){
+                messageRowHtml = `<div class="outgoing_msg">
+                    <div class="sent_msg">
+                        <p>${message.body}</p>
+                        <span class="time_date"> 11:01 AM    |    June 9</span> </div>
+                </div>`
+            }else{
+                    messageRowHtml = `<div class="incoming_msg">
+                        <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                        <div class="received_msg">
+                            <div class="received_withd_msg">
+                                <p>${message.body}</p>
+                                <span class="time_date"> 11:01 AM    |    June 9</span></div>
+                        </div>
+                </div>`
+            }
+            return messageRowHtml;
+        }
+    });
+</script>
