--- a/lib/grocery_store_web/templates/layout/app.html.eex
+++ b/lib/grocery_store_web/templates/layout/app.html.eex
@@ -50,9 +50,9 @@
                   <a class="dropdown-item" href="#">Cart</a>
                 </div>
               </li>
-              <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
               <%= if logged_in?(@conn) do %>
               <li class="nav-item cta cta-colored"><a href="#" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li>
+                <li class="nav-item"><%= link "Chat", to: page_path(@conn, :index), class: "nav-link"%></li>
                 <li class="nav-item welcome-msg"> Welcome <%= current_user(@conn).name %></li>
                 <li class="nav-item"><%= link "Logout", to: session_path(@conn, :delete), method: :delete , class: "nav-link" %></li>
               <% else %>
